# GraphColoring

./: CMakeLists.txt  ColoredGraph.h  ColoredNode.h  Colors.h  Graph.h  Node.h  Parameters.h  Problem.h  README.md  main.cpp
.github/workflows/: cmake.yml
examples/: input_file.txt  input_file2.txt  input_file3.txt  input_file4.txt  input_file5.txt  input_file6.txt  input_file7.txt  input_file8.txt  input_file9.txt  input_fileA.txt  input_fileB.txt
script/: main.py
testing/: CMakeLists.txt  main.py  test1_solution.txt  test2_solution.txt  test3_multiple_params.txt  test3_multiple_params1.txt  test3_multiple_params2.txt  test3_mutation_prob_solution.txt  test3_num_runs_solution.txt  test3_num_runs_solution1.txt  test3_num_runs_solution2.txt  test3_pop_size_solution.txt  test3_seed_solution.txt  test3_solution.txt  test3_tournament_size_solution.txt
